# vega-forge

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
docs/: spec-format.md
examples/specs/: api-service.json  python-cli.json  static-site.json
scripts/: verify.py
src/vega_forge/: cli.py
tests/: test_specs.py
