[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vega-forge"
version = "0.1.0"
description = "AI-assisted project scaffolder from structured specs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vega-Starboard" }]
dependencies = []

[project.scripts]
vega-forge = "vega_forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
